# gmm

./: ChangeLog  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.in
docs/: gmm.html
gmm/: Makefile.am  Makefile.in  gmm.c  gmm_aux.c
include/: Makefile.am  Makefile.in  gmm.h
test/: Makefile.am  Makefile.in  gmm-exec-fault.sh  gmm-test.c  gmm-test.sh
