dnl Process this file with autoconf to produce a configure script.
AC_INIT(gmm, 0.6)
AM_INIT_AUTOMAKE(gmm, 0.6)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

dnl Checks for libraries.
dlopen_found=no
DL_LIB=
AC_CHECK_FUNC(dlopen, dlopen_found=yes,
  AC_CHECK_LIB(dl, dlopen, dlopen_found=yes DL_LIB=-ldl))
AC_SUBST(DL_LIB)

if test "$dlopen_found" = no; then
  AC_MSG_ERROR(could not find dlopen function)
fi

dnl Checks for header files.
AC_STDC_HEADERS

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_C_VOLATILE
AC_C_CONST
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_CHECK_FUNCS(memset memcpy strcpy strncpy)

AC_OUTPUT(Makefile include/Makefile gmm/Makefile test/Makefile)

